pod-security-vpol/baseline/restrict-apparmor-profiles/.chainsaw-test/pod-good.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
spec:
  containers:
  - name: container01
    image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02
spec:
  securityContext:
    appArmorProfile:
      type: RuntimeDefault
  containers:
  - name: container01
    image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod03
spec:
  securityContext:
    appArmorProfile:
      type: Localhost
      localhostProfile: my-profile
  containers:
  - name: container01
    image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod04
spec:
  containers:
  - name: container01
    image: dummyimagename
    securityContext:
      appArmorProfile:
        type: RuntimeDefault
  - name: container02
    image: dummyimagename
    securityContext:
      appArmorProfile:
        type: Localhost
        localhostProfile: my-profile
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod05
spec:
  initContainers:
  - name: initcontainer01
    image: dummyimagename
    securityContext:
      appArmorProfile:
        type: Localhost
        localhostProfile: my-profile
  containers:
  - name: container01
    image: dummyimagename
    securityContext:
      appArmorProfile:
        type: RuntimeDefault
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod06
  annotations:
    container.apparmor.security.beta.kubernetes.io/container01: runtime/default
spec:
  containers:
  - name: container01
    image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod07
  annotations:
    container.apparmor.security.beta.kubernetes.io/container01: localhost/my-profile
spec:
  containers:
  - name: container01
    image: dummyimagename
    securityContext:
      appArmorProfile:
        type: Localhost
        localhostProfile: my-profile
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod08
  annotations:
    container.apparmor.security.beta.kubernetes.io/initcontainer01: localhost/my-profile
    foo.example.com/apparmor: unconfined
spec:
  initContainers:
  - name: initcontainer01
    image: dummyimagename
  containers:
  - name: container01
    image: dummyimagename
