pod-security-vpol/baseline/restrict-apparmor-profiles/.chainsaw-test/podcontroller-bad.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      securityContext:
        appArmorProfile:
          type: Unconfined
      containers:
      - name: container01
        image: dummyimagename
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment02
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: container01
        image: dummyimagename
      - name: container02
        image: dummyimagename
        securityContext:
          appArmorProfile:
            type: Unconfined
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment03
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      initContainers:
      - name: initcontainer01
        image: dummyimagename
        securityContext:
          appArmorProfile:
            type: Unconfined
      containers:
      - name: container01
        image: dummyimagename
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment04
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
      annotations:
        container.apparmor.security.beta.kubernetes.io/container01: unconfined
    spec:
      containers:
      - name: container01
        image: dummyimagename
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: badcronjob01
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          securityContext:
            appArmorProfile:
              type: Unconfined
          containers:
          - name: container01
            image: dummyimagename
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: badcronjob02
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
          - name: container01
            image: dummyimagename
          - name: container02
            image: dummyimagename
            securityContext:
              appArmorProfile:
                type: Unconfined
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: badcronjob03
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          initContainers:
          - name: initcontainer01
            image: dummyimagename
            securityContext:
              appArmorProfile:
                type: Unconfined
          containers:
          - name: container01
            image: dummyimagename
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: badcronjob04
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        metadata:
          annotations:
            container.apparmor.security.beta.kubernetes.io/container01: unconfined
        spec:
          restartPolicy: OnFailure
          containers:
          - name: container01
            image: dummyimagename
